--- a/src/stylesheets/Home.scss
+++ b/src/stylesheets/Home.scss
@@ -6,19 +6,57 @@
     justify-content: center;
   }
   .dashboard__container {
+    // display: flex;
+    // flex-direction: column;
+    // text-align: center;
+    // background-color: #dcdcdc;
+    // padding: 30px;
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #dcdcdc;
+    background-color: white;
     padding: 30px;
+    border-radius: 14px;
+    box-shadow: rgba(101, 71, 71, 0.15) 0 3px 9px 0;
   }
+  
   .dashboard__btn {
+    // padding: 10px;
+    // font-size: 18px;
+    // margin-top: 10px;
+    // border: none;
+    // color: white;
+    // background-color: black;
     padding: 10px;
-    font-size: 18px;
-    margin-top: 10px;
+    margin-top: 9px;
+    margin-bottom: 10px;
+    color:white;
+    background-color: transparent;
     border: none;
-    color: white;
-    background-color: black;
+    border-radius: 0.4rem;
+    box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-size: 1.2rem;
+    font-weight: 400;
+    outline: none;
+    outline: 0;
+    padding: 0.6rem 1.5rem;
+    text-align: center;
+    transform: translateY(0);
+    transition: transform 150ms, box-shadow 150ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    position: relative;
+    background-color: rgb(7, 15, 44);
+
+    &:hover {
+      box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+      transform: translateY(-2px);
+      background-color: rgb(7, 15, 44);
+
+    }
   }
   .dashboard div {
     margin-top: 7px;
