--- a/src/stylesheets/Login.scss
+++ b/src/stylesheets/Login.scss
@@ -5,7 +5,8 @@ $white: #fff;
 
 *{
     margin: 0;
-}.login {
+}
+.login {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -42,12 +43,7 @@ $white: #fff;
   }
   .login__btn {
     padding: 10px;
-    // font-size: 18px;
     margin-bottom: 10px;
-    // border: none;
-    // color: white;
-    // background-color:rgb(7, 15, 44);
-    // border-radius: 10px;
     color:white;
     background-color: transparent;
     border: none;
@@ -93,6 +89,7 @@ $white: #fff;
     border-radius: 0.2rem;
     background-color: #fff;
     border: 0.1px solid rgb(216, 211, 211);
+    cursor: pointer;
     }
     .google-icon {
       margin-top: 0.5rem;
