--- a/src/stylesheets/Reset.scss
+++ b/src/stylesheets/Reset.scss
@@ -1,3 +1,6 @@
+$google-blue: #4285f4;
+$button-active-blue: #1669f2;
+$white: #fff;
 .reset {
     height: 100vh;
     width: 100vw;
@@ -6,24 +9,68 @@
     justify-content: center;
   }
   .reset__container {
+
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #dcdcdc;
+    background-color: $white;
     padding: 30px;
+    border-radius: 14px;
+    box-shadow: rgba(101, 71, 71, 0.15) 0 3px 9px 0;
   }
   .reset__textBox {
+    // padding: 10px;
+    // font-size: 18px;
+    // margin-bottom: 10px;
     padding: 10px;
     font-size: 18px;
     margin-bottom: 10px;
+    max-width: 380px;
+    margin: 10px 0;
+    height: 55px;
+    /* border-radius: 10px; */
+    padding: 0px 1.5rem;
+    position: relative;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid gray;
   }
   .reset__btn {
+    // padding: 10px;
+    // font-size: 18px;
+    // margin-bottom: 10px;
+    // border: none;
+    // color: white;
+    // background-color: black;
     padding: 10px;
-    font-size: 18px;
     margin-bottom: 10px;
+    color:white;
+    background-color: transparent;
     border: none;
-    color: white;
-    background-color: black;
+    border-radius: 0.4rem;
+    box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-size: 1.2rem;
+    font-weight: 400;
+    outline: none;
+    outline: 0;
+    padding: 0.6rem 1.5rem;
+    text-align: center;
+    transform: translateY(0);
+    transition: transform 150ms, box-shadow 150ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    position: relative;
+    background-color: rgb(7, 15, 44);
+
+    &:hover {
+      box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+      transform: translateY(-2px);
+      background-color: rgb(7, 15, 44);
+
+    }
   }
   .reset div {
     margin-top: 7px;
