--- a/src/stylesheets/Reset.scss
+++ b/src/stylesheets/Reset.scss
@@ -2,6 +2,7 @@ $google-blue: #4285f4;
 $button-active-blue: #1669f2;
 $white: #fff;
 .reset {
+  background-image: linear-gradient(to right bottom, #051937, #13152c, #171221, #150f18, #0e0d0e);
     height: 100vh;
     width: 100vw;
     display: flex;
