--- a/src/stylesheets/Home.scss
+++ b/src/stylesheets/Home.scss
@@ -1,4 +1,5 @@
 .dashboard {
+  background-image: linear-gradient(to right bottom, #051937, #13152c, #171221, #150f18, #0e0d0e);
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -6,11 +7,7 @@
     justify-content: center;
   }
   .dashboard__container {
-    // display: flex;
-    // flex-direction: column;
-    // text-align: center;
-    // background-color: #dcdcdc;
-    // padding: 30px;
+   
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -21,12 +18,7 @@
   }
   
   .dashboard__btn {
-    // padding: 10px;
-    // font-size: 18px;
-    // margin-top: 10px;
-    // border: none;
-    // color: white;
-    // background-color: black;
+  
     padding: 10px;
     margin-top: 9px;
     margin-bottom: 10px;
