--- a/src/stylesheets/Login.scss
+++ b/src/stylesheets/Login.scss
@@ -7,6 +7,7 @@ $white: #fff;
     margin: 0;
 }
 .login {
+  background-image: linear-gradient(to right bottom, #051937, #13152c, #171221, #150f18, #0e0d0e);
     height: 100vh;
     width: 100vw;
     display: flex;
