--- a/src/stylesheets/Signup.scss
+++ b/src/stylesheets/Signup.scss
@@ -4,7 +4,9 @@ $white: #fff;
 
 *{
     margin: 0;
-}.register {
+}
+.register {
+  background-image: linear-gradient(to right bottom, #051937, #13152c, #171221, #150f18, #0e0d0e);
     height: 100vh;
     width: 100vw;
     display: flex;
