--- a/src/stylesheets/profile.scss
+++ b/src/stylesheets/profile.scss
@@ -16,7 +16,7 @@
 .joining-date {
     position:absolute;
     top:260px;
-    margin-left: 60px;
+    margin-left: 40px;
 }
 .verification {
     height: 30px;
@@ -77,7 +77,7 @@
     // background-color:red;
 }
 .username-heading {
-    color: rgb(242, 106, 97);
+    color: #EF6761;
     font-size: 32px;
     font-family: Montserrat;
 
@@ -216,4 +216,8 @@ width: 235px;
 #user_email {
     font-size: 16px;
     padding: 12px;
+}
+a {
+text-decoration: none;
+color: inherit;
 }
