--- a/src/stylesheets/Details.scss
+++ b/src/stylesheets/Details.scss
@@ -55,6 +55,7 @@ outline: none;
     margin: 4px;
     background:radial-gradient(circle farthest-side at 10% 10%, rgb(242, 106, 97) 0%, rgb(159, 35, 101) 100%);
     border: none;
+    padding: 4px;
   
   &:hover {
     transform: translateY(-2px);
