--- a/src/stylesheets/profile.scss
+++ b/src/stylesheets/profile.scss
@@ -62,12 +62,12 @@
     width: 30px;
 }
 .profile-main-container {
-    width: 1136px;
+    width: 1196px;
     position: absolute;
-    background-color:#f2f0e5;
+    background-color: #f2f0e5;
     padding: 2rem;
-    margin-left: 166px;
-    height: 1120px;
+    margin-left: 93px;
+    height: 1100px;
 }
 .username {
     position: absolute;
@@ -90,13 +90,13 @@
     margin: 61px 100px;
     box-sizing: border-box;
     z-index: 2;
-    height: 1100px;
+    height: 1050px;
     top: 0px;
-    background-color: rgba(230, 230, 230, 0.54);
+    background-color: rgba(83, 80, 80, 0.54);
     border-style: solid;
     border-width: 1px;
     border-color: rgba(171, 171, 171, 0);
-    border-radius: 20px;
+    border-radius: 20px 20px 0px 0px;
 }
 
 .profile-image-container{
