Fixed cities selection bug

--- a/src/stylesheets/AllPackages.scss
+++ b/src/stylesheets/AllPackages.scss
@@ -1,6 +1,7 @@
 .all_pkgs_container {
     display: flex;
     margin-left: 93px;
+    height: 100%;
     background-color:#f2f0e5;
     width: 1195px;
 }
