--- a/src/stylesheets/DashboardSideBar.scss
+++ b/src/stylesheets/DashboardSideBar.scss
@@ -5,8 +5,9 @@
     width: 210px;
     top: 43%;
     height: 100vh;
-    background-color:#f2f0e5;
+   // background-color:#f2f0e5;
     border-radius: 6px;
+    background-color:cadetblue;
     padding: 6px 0px;
 
 }
